# pylops

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  MIGRATION_V1_V2.md  Makefile  README.md  azure-pipelines.yml  dtcwt_temp_test.py  environment-dev-arm.yml  environment-dev-gpu.yml  environment-dev.yml  environment.yml  environment_v1.yml  mypy.ini  pyproject.toml  readthedocs.yml  requirements-dev-gpu.txt  requirements-dev.txt  requirements-doc.txt  requirements-torch.txt  requirements.txt  setup.cfg  setup.py
.eggs/setuptools_scm-4.1.1-py3.7.egg/EGG-INFO/: PKG-INFO  RECORD
.github/workflows/: build.yaml  buildcupy.yaml  codacy-coverage-reporter.yaml  deploy.yaml  flake8.yaml
docs/: Makefile
docs/source/: adding.rst  addingsolver.rst  changelog.rst  citing.rst  conf.py  contributing.rst  credits.rst  extensions.rst  faq.rst  gpu.rst  index.rst  installation.rst  papers.rst  performance.rst  roadmap.rst  sg_execution_times.rst
docs/source/_static/: style.css
docs/source/_templates/: breadcrumbs.html
examples/: README.txt  plot_avo.py  plot_bayeslinearregr.py  plot_bilinear.py  plot_blending.py  plot_causalintegration.py  plot_cgls.py  plot_chirpradon.py  plot_conj.py  plot_convolve.py  plot_dct.py  plot_derivative.py  plot_describe.py  plot_diagonal.py  plot_dtcwt.py  plot_fft.py  plot_flip.py  plot_fourierradon.py  plot_identity.py  plot_imag.py  plot_ista.py  plot_l1l1.py  plot_linearregr.py  plot_matrixmult.py  plot_mdc.py  plot_multiproc.py  plot_nmo.py  plot_nonstatconvolve.py  plot_nonstatfilter.py  plot_pad.py  plot_patching.py  plot_phaseshift.py  plot_prestack.py  plot_radon.py  plot_radon2d.py  plot_real.py  plot_regr.py  plot_restriction.py  plot_roll.py  plot_seislet.py  (+20 more)
lops/: LinearOperator.py  __init__.py
lops/avo/: avo.py  poststack.py  prestack.py
lops/basicoperators/: BlockDiag.py  Diagonal.py  FirstDerivative.py  HStack.py  Identity.py  Laplacian.py  LinearRegression.py  MatrixMult.py  Restriction.py  SecondDerivative.py  Smoothing1D.py  Smoothing2D.py  VStack.py  Zero.py  __init__.py
lops/optimization/: leastsquares.py
lops/signalprocessing/: Convolve1D.py  Convolve2D.py  FFT.py  FFT2D.py
lops/utils/: dottest.py  seismicevents.py  signalprocessing.py  tapers.py  wavelets.py
lops/waveeqprocessing/: __init__.py  marchenko.py  mdd.py
playground/: TraceEstimator.ipynb
pylops/: LinearOperator.py  TorchOperator.py  __init__.py  _torchoperator.py  config.py  jaxoperator.py  linearoperator.py  pytensoroperator.py  torchoperator.py  version.py
pylops/avo/: __init__.py  avo.py  poststack.py  prestack.py
pylops/basicoperators/: Block.py  BlockDiag.py  CausalIntegration.py  Conj.py  Diagonal.py  DirectionalDerivative.py  FirstDerivative.py  Flip.py  FunctionOperator.py  Gradient.py  HStack.py  Identity.py  Imag.py  Kronecker.py  Laplacian.py  LinearRegression.py  MatrixMult.py  MemoizeOperator.py  Pad.py  Real.py  Regression.py  Restriction.py  Roll.py  SecondDerivative.py  Smoothing1D.py  Smoothing2D.py  Spread.py  Sum.py  Symmetrize.py  Transpose.py  VStack.py  Zero.py  _Spread_numba.py  __init__.py  _spread_numba.py  block.py  blockdiag.py  causalintegration.py  conj.py  diagonal.py  (+28 more)
pylops/optimization/: __init__.py  base_linearoperator.py  basesolver.py  basic.py  basicc.py  callback.py  cls_basic.py  cls_leastsquares.py  cls_sparsity.py  cls_sparsity_NEW.py  eigs.py  leastsquares.py  leastsquares_old.py  leastsquaresc.py  sample.py  solver.py  solver_old.py  sparsity.py  sparsity_old.py  sparsityc.py
pylops/signalprocessing/: Bilinear.py  ChirpRadon2D.py  ChirpRadon3D.py  Convolve1D.py  Convolve2D.py  ConvolveND.py  DWT.py  DWT2D.py  FFT.py  FFT2D.py  FFTND.py  Fredholm1.py  Interp.py  Patch2D.py  Patch3D.py  Radon2D.py  Radon3D.py  Seislet.py  Shift.py  Sliding1D.py  Sliding2D.py  Sliding3D.py  _BaseFFTs.py  _ChirpRadon2D.py  _ChirpRadon3D.py  _Radon2D_numba.py  _Radon3D_numba.py  __init__.py  _baseffts.py  _chirpradon2d.py  _chirpradon3d.py  _fourierradon2d_cuda.py  _fourierradon2d_numba.py  _fourierradon3d_cuda.py  _fourierradon3d_numba.py  _nonstatconvolve2d_cuda.py  _nonstatconvolve3d_cuda.py  _radon2d_numba.py  _radon3d_numba.py  bilinear.py  (+31 more)
pylops/transforms/: __init__.py  dct.py  discreetcosine.py
pylops/utils/: __init__.py  _internal.py  backend.py  decorators.py  deps.py  describe.py  dottest.py  estimators.py  metrics.py  multiproc.py  seismicevents.py  signalprocessing.py  tapers.py  typing.py  utils.py  wavelets.py
pylops/waveeqprocessing/: __init__.py  _kirchhoff_cuda.py  _twoway.py  blending.py  kirchhoff.py  lsm.py  marchenko.py  mdd.py  oneway.py  seismicinterpolation.py  twoway.py  wavedecomposition.py
pytests/: test_avo.py  test_basicoperators.py  test_blending.py  test_causalintegration.py  test_chirpradon.py  test_combine.py  test_convolve.py  test_dct.py  test_derivative.py  test_describe.py  test_diagonal.py  test_directwave.py  test_dtcwt.py  test_dwts.py  test_eigs.py  test_estimators.py  test_ffts.py  test_fourierradon.py  test_fredholm.py  test_functionoperator.py  test_interpolation.py  test_jaxoperator.py  test_kirchhoff.py  test_kronecker.py  test_leastsquares.py  test_linearoperator.py  test_lsm.py  test_marchenko.py  test_memoizeoperator.py  test_metrics.py  test_nonstatconvolve.py  test_oneway.py  test_pad.py  test_patching.py  test_poststack.py  test_prestack.py  test_pytensoroperator.py  test_radon.py  test_restriction.py  test_seislet.py  (+19 more)
testdata/: python.npy  sigmoid.npz
testdata/avo/: poststack_model.npz
testdata/deblending/: mobil.npy
testdata/marchenko/: direct3D.npz
testdata/optimization/: shepp_logan_phantom.npy
tutorials/: README.txt  bayesian.py  classsolvers.py  ctscan.py  deblending.py  deblurring.py  deghosting.py  dottest.py  ilsm.py  interpolation.py  jaxop.py  linearoperator.py  lsm.py  marchenko.py  mdd.py  optimization.py  poststack.py  prestack.py  radonfiltering.py  realcomplex.py  seismicinterpolation.py  solvers.py  torchop.py  wavefielddecomposition.py
(+4 files in other folders)
