[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pylops"
authors = [
    {name = "Matteo Ravasi", email = "matteoravasi@gmail.com"},
]
description = "Python library implementing linear operators to allow solving large-scale optimization problems."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["algebra", "inverse problems", "large-scale optimization"]
license.file = "LICENSE.md"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
        "numpy >= 1.21.0",
        "scipy >= 1.4.0",
    ]
dynamic = ["version", ]

[project.optional-dependencies]
advanced = ["llvmlite",
            "numba",
            "pyfftw",
            "PyWavelets",
            "scikit-fmm",
            "spgl1",
]

[tool.setuptools.packages.find]
exclude = ["pytests"]
namespaces = false

[tool.setuptools_scm]
version_file = "pylops/version.py"
